Added the preview buttons to the index page.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
 					<input type='hidden' name='redirect_url' value='https://lasertech-entertainment.github.io/DigitalCollage/sent.html' />
 				</form>
 			</div>
+			<div class="col-12 mt-4">
+				<a class="preview btn btn-primary" href="result.html">Open 3D Preview</a>
+				<a class="preview btn btn-primary" href="other.html">Open 2D Preview</a>
+			</div>
 		</div>
 		<script>
 			$(document).ready(function () {
